--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <div class="answers">
                 <div class="p-opt" id="noswap"><div class="opt" id="opt1" onclick="nextQuestion()">Yes</div></div>
-                <div class="p-opt" id="swap" onmouseover="move()"><div class="opt" id="opt2" onclick="end()">No</div></div>
+                <div class="p-opt" id="swap" onmouseover="move()"><div class="opt" id="opt2" onclick="move()">No</div></div>
             </div>
         </div>
         <div id="final-qn" >
